<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">




    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/nav_message" />

    <item
        android:id="@+id/nav_synch"
        android:icon="@drawable/ic_baseline_sync_24"
        android:title="@string/nav_message" />

    <item
        android:id="@+id/nav_trash"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/nav_trash" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/nav_settings" />
    </group>


    <group  android:checkableBehavior="single">

    <item android:id="@+id/profileTitle" android:title="@string/profileTitle">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/login"
                android:title="@string/nav_profile" />
        </menu>
    </item>
    </group>


    <group  android:checkableBehavior="single">
    <item android:id="@+id/communicationTitle" android:title="@string/communicationTitle">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/nav_share" />

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_baseline_rate_review_24"
                android:title="@string/nav_rate" />
        </menu>.

    </item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/nav_logout" />
    </group>



</menu>