<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background ="@drawable/background_login"
    tools:context=".Register_page">


    <TextView
        android:id="@+id/signuptitle"
        android:layout_width="286dp"
        android:layout_height="36dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="10dp"
        android:background="#5903A9F4"
        android:textColorHint="#1E1C1E"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/signuptitle"
        tools:ignore="HardcodedText" />


    <EditText
        android:id="@+id/usernameRegiter"
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:layout_below="@+id/signuptitle"
        android:layout_marginStart="66dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="66dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:hint="@string/usernameRegiter"
        android:textColorHint="#1E1C1E"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:layout_below="@+id/usernameRegiter"
        android:layout_marginStart="66dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="66dp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:hint="@string/editTextTextEmailAddress"
        android:textColorHint="#1E1C1E"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:layout_below="@+id/editTextTextEmailAddress"
        android:layout_marginStart="66dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="66dp"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:drawableRight="@drawable/ic_baseline_visibility_off_24"
        android:hint="@string/editTextTextPassword"
        android:inputType="textPassword"
        android:longClickable="false"
        android:textColorHint="#1E1C1E" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:layout_below="@+id/editTextTextPassword"
        android:layout_marginStart="66dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="66dp"
        android:hint="@string/editTextTextPassword2"
        android:textColorHint="#1E1C1E"
        android:inputType="textPassword"
        android:drawableRight="@drawable/ic_baseline_visibility_off_24"
        android:longClickable="false"
        android:drawableLeft="@drawable/ic_baseline_info_24"/>

    <Button
        android:id="@+id/button"
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:layout_below="@+id/editTextTextPassword2"
        android:layout_marginStart="75dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="75dp"
        android:text="@string/button"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/button1"
        android:layout_width="286dp"
        android:layout_height="46dp"
        android:layout_below="@+id/button"
        android:layout_marginStart="75dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="75dp"
        android:text="@string/button1"
        android:textColorHint="#1E1C1E"
        android:textSize="15dp"
        android:textStyle="bold"

        />




    <ImageView
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="500dp"
        android:layout_marginStart="120dp"
        android:src="@drawable/google"
        tools:ignore="HardcodedText"/>

    <ImageView
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="500dp"
        android:layout_marginStart="163dp"
        android:src="@drawable/facebook"
        />
    <ImageView
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="500dp"
        android:layout_marginStart="206dp"
        android:src="@drawable/twitter"
        />
    <ImageView
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="500dp"
        android:layout_marginStart="249dp"
        android:src="@drawable/linkedin"
        />
    <TextView
        android:id="@+id/optionSocialMedia"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="470dp"
        android:text="@string/optionSocialMedia" />



</RelativeLayout>